; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_33971.c_avp3_recv.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_33971.c_avp3_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFFSZ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @avp3_recv(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [8 x i32], align 16
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load i32, i32* %5, align 4
  %12 = getelementptr inbounds [8 x i32], [8 x i32]* %10, i64 0, i64 0
  %13 = call i64 @tcp_recv(i32 %11, i32* %12, i32 8)
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %43

16:                                               ; preds = %3
  %17 = load i32*, i32** %6, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %16
  %20 = getelementptr inbounds [8 x i32], [8 x i32]* %10, i64 0, i64 0
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @getxx(i32* %20, i32* %21, i32 16)
  br label %23

23:                                               ; preds = %19, %16
  %24 = getelementptr inbounds [8 x i32], [8 x i32]* %10, i64 0, i64 0
  %25 = getelementptr inbounds i32, i32* %24, i64 2
  %26 = call i32 @getxx(i32* %25, i32* %8, i32 16)
  %27 = getelementptr inbounds [8 x i32], [8 x i32]* %10, i64 0, i64 0
  %28 = getelementptr inbounds i32, i32* %27, i64 4
  %29 = call i32 @getxx(i32* %28, i32* %9, i32 32)
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* @BUFFSZ, align 4
  %32 = icmp sgt i32 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %23
  store i32 -1, i32* %4, align 4
  br label %43

34:                                               ; preds = %23
  %35 = load i32, i32* %5, align 4
  %36 = load i32*, i32** %7, align 8
  %37 = load i32, i32* %8, align 4
  %38 = call i64 @tcp_recv(i32 %35, i32* %36, i32 %37)
  %39 = icmp slt i64 %38, 0
  br i1 %39, label %40, label %41

40:                                               ; preds = %34
  store i32 -1, i32* %4, align 4
  br label %43

41:                                               ; preds = %34
  %42 = load i32, i32* %8, align 4
  store i32 %42, i32* %4, align 4
  br label %43

43:                                               ; preds = %41, %40, %33, %15
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i64 @tcp_recv(i32, i32*, i32) #1

declare dso_local i32 @getxx(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
